# cardano-node

./: cabal.project  default.nix  flake.nix  shell.nix
.github/workflows/: haskell.yml
bench/: flt-full-k10.json  flt-midsize.json
bench/locli/: locli.cabal
bench/locli/src/Cardano/Analysis/: API.hs  BlockProp.hs  ChainFilter.hs  Driver.hs  MachTimeline.hs  Profile.hs
bench/locli/src/Cardano/Unlog/: Commands.hs  LogObject.hs  Parsers.hs  Run.hs
bench/tx-generator/src/Cardano/Benchmarking/: PlutusExample.hs
cardano-api/: cardano-api.cabal
cardano-api/src/Cardano/: Api.hs
cardano-api/src/Cardano/Api/: Address.hs  Certificate.hs  Eras.hs  GenesisParameters.hs  LedgerEvent.hs  LedgerState.hs  Orphans.hs  ProtocolParameters.hs  Query.hs  Script.hs  SerialiseRaw.hs  Tx.hs  TxBody.hs  Utils.hs  Value.hs  ValueParser.hs
cardano-api/src/Cardano/Api/Shelley/: Genesis.hs
cardano-api/test/Test/Cardano/Api/: Genesis.hs  TxBody.hs
cardano-cli/: cardano-cli.cabal
cardano-cli/src/Cardano/CLI/: Helpers.hs
cardano-cli/src/Cardano/CLI/Byron/: Parsers.hs
cardano-cli/src/Cardano/CLI/Run/: Friendly.hs
cardano-cli/src/Cardano/CLI/Shelley/: Commands.hs  Orphans.hs  Parsers.hs
cardano-cli/test/Test/Golden/: TxView.hs
cardano-cli/test/data/golden/allegra/: transaction-view.out
cardano-cli/test/data/golden/mary/: transaction-view.out
cardano-cli/test/data/golden/shelley/: transaction-view.out
cardano-client-demo/: LedgerState.hs  StakeCredentialHistory.hs  cardano-client-demo.cabal
cardano-node/: cardano-node.cabal
cardano-node/src/Cardano/Node/: Parsers.hs  Queries.hs  Run.hs
cardano-node/src/Cardano/Node/Configuration/: POM.hs
cardano-node/src/Cardano/TraceDispatcher/: API.hs  Documentation.hs  Render.hs  Tracers.hs
cardano-node/src/Cardano/Tracing/: Constraints.hs  Peer.hs  Tracers.hs
cardano-testnet/: cardano-testnet.cabal
cardano-tracer/: cardano-tracer.cabal
configuration/cardano/: mainnet-alonzo-genesis.json  mainnet-config.yaml
doc/reference/: shelley-genesis.md
doc/reference/plutus/: plutus-minting-script-example.md
doc/stake-pool-operations/: retire_stakepool.md
nix/nixos/: cardano-node-service.nix
nix/workbench/: analyse.sh  run.sh
nix/workbench/profiles/: adhoc.jq
plutus-example/: .gitignore
plutus-example/plutus-example/: plutus-example.cabal
plutus-example/plutus-example/app/: create-script-context.hs  plutus-example.hs
plutus-example/plutus-example/src/Cardano/PlutusExample/: ScriptContextChecker.hs
scripts/: reconfigure-hlint.sh
scripts/byron-to-alonzo/: mkfiles.sh
scripts/plutus/: script-context-equivalance-test.sh  test.sh
scripts/plutus/data/: script-context.redeemer
scripts/plutus/scripts/: context-equivalance-test.plutus  custom-guess-42-datum-42.plutus
trace-dispatcher/: trace-dispatcher.cabal
trace-dispatcher/src/Cardano/Logging/: DocuGenerator.hs  Types.hs
(+41 files in other folders)
