cabal-version: 2.4

name:                   plutus-example
version:                1.28.0
description:            End to end examples of creating and executing Plutus scripts.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
build-type:             Simple
extra-source-files:     README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Cardano.PlutusExample.AlwaysFails
                        Cardano.PlutusExample.AlwaysSucceeds
                        Cardano.PlutusExample.CustomDatumRedeemerGuess
                        Cardano.PlutusExample.DatumRedeemerGuess
                        Cardano.PlutusExample.MintingScript
                        Cardano.PlutusExample.ScriptContextChecker

  build-depends:        aeson
                      , bytestring
                      , cardano-api
                      , cardano-ledger-alonzo
                      , data-default
                      , filepath
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise
                      , transformers
                      , transformers-except

executable plutus-example
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              plutus-example.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-api
                      , bytestring
                      , directory
                      , filepath
                      , plutus-example


executable create-script-context
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              create-script-context.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        bytestring
                      , plutus-example
                      , transformers
